--- a/.github/workflows/main_fakeRestApiNet46.yml
+++ b/.github/workflows/main_fakeRestApiNet46.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ASP-app
-          path: '/'
+          path: '/**'
 
   deploy:
     runs-on: windows-latest
