--- a/.github/workflows/main_fakeRestApiNet46.yml
+++ b/.github/workflows/main_fakeRestApiNet46.yml
@@ -15,12 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Publish to folder
+        run: move "." "\published\"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: ASP-app
-          path: '/**'
+          path: '/published/**'
 
   deploy:
     runs-on: windows-latest
