--- a/.github/workflows/main_fakeRestApiNet46.yml
+++ b/.github/workflows/main_fakeRestApiNet46.yml
@@ -30,6 +30,13 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
+      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
+          enable-AzPSSession: true
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
